Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41089

QUrl::fromUserInput should not treat IPv6 addresses as files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.0
    • 5.3.1
    • Core: URL Handling
    • None

      When using QUrl::fromUserInput with ::1, it returns a QUrl with the value file:///::1. I'd expect something like http:// [::1] instead. (minus the space, couldn't get JIRA to not treat this as a link)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes